--- a/bigtop-deploy/puppet/modules/kerberos/templates/kdc.conf
+++ b/bigtop-deploy/puppet/modules/kerberos/templates/kdc.conf
@@ -13,14 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-default_realm = <%= @realm %>
+default_realm = KRB.TEST.COM
 
 [kdcdefaults]
     # v4_mode = nopreauth
     kdc_ports = 0
 
 [realms]
-    <%= @realm %> = {
+    KRB.TEST.COM = {
         kdc_ports = <%= @kdc_port %>
         admin_keytab = /etc/kadm5.keytab
         database_name = <%= @kdc_db_path %>/principal
