--- a/bigtop-deploy/puppet/modules/kerberos/templates/krb5.conf
+++ b/bigtop-deploy/puppet/modules/kerberos/templates/krb5.conf
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 [libdefaults]
-    default_realm = <%= @realm %>
+    default_realm = KRB.TEST.COM
     dns_lookup_realm = false
     dns_lookup_kdc = false
     ticket_lifetime = 24h
@@ -25,15 +25,15 @@
     permitted_enctypes = des-cbc-md5 des-cbc-crc des3-cbc-sha1
 
 [realms]
-    <%= @realm %> = {
+    KRB.TEST.COM = {
         kdc = <%= @kdc_server %>:<%= @kdc_port %>
         admin_server = <%= @kdc_server %>:<%= @admin_port %>
-        default_domain = <%= @domain %>
+        default_domain = krb.test.com
     }
 
 [domain_realm]
-    .<%= @domain %> = <%= @realm %>
-     <%= @domain %> = <%= @realm %>
+    rockylinux = KRB.TEST.COM
+     rockylinux2 = KRB.TEST.COM
 
 [logging]
     kdc = FILE:/var/log/krb5kdc.log
